Fix lag on large tile set in editor UI
- Rework the rendering for tile set editor UI with appropriate caching, prevent the editor from becoming too unresponsive when a large amount of tile is being selected and active in the tile set.